force-app/main/default/objects/NST_Pricing__c/NST_Pricing__c.object-meta.xml
<CustomObject>
    <label>NST Pricing</label>
    <nameField>
        <label>NST Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NST Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>