force-app/main/default/objects/NST_Pricing__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <label>Exposure</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>