force-app/main/default/objects/NST_Pricing__c/fields/Final_Level_At__c.field-meta.xml
<CustomField>
    <fullName>Final_Level_At__c</fullName>
    <formula>IF(ISBLANK(Exposure__c), &quot;PBF Head&quot;,IF( Application__r.NTF_Pengajuan_CAA__c &gt;  Exposure__c , &quot;Marketing Deputy Director&quot;, &quot;PBF Head&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Level At</label>
    <type>Text</type>
</CustomField>