force-app/main/default/objects/NST_Pricing__c/fields/NST_Criteria__c.field-meta.xml
<CustomField>
    <fullName>NST_Criteria__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NST Criteria</label>
    <type>Text</type>
</CustomField>