force-app/main/default/objects/NST_Pricing__c/fields/Real__c.field-meta.xml
<CustomField>
    <fullName>Real__c</fullName>
    <label>Real Criteria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>