force-app/main/default/objects/NST_Pricing__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard Criteria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>